[016-(0.1.6)]: iPad Landscape Buttons >> Attempted to solve the issue of the landscape buttons taking up too much space. This change should also improve the format of the android landscape mode as well.

--- a/buttonStyle.css
+++ b/buttonStyle.css
@@ -271,12 +271,27 @@ i{
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
         grid-template-rows: .5fr .5fr;
         grid-template-areas:
-        "help north inspect attack flee settings"
-        "west south east defend next item";
+        "settings north item attack flee help"
+        "west south east defend next inspect";
     }
   }
 
   /* #### Tablets Portrait or Landscape #### */
 @media screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+    .controlPanelSection {
+        display: grid;
     
+        grid-gap: 1rem;
+        margin-left: .5rem;
+        margin-right: .5rem;
+        margin-top: 1rem;
+    
+        padding-bottom: 1rem;
+    
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: .5fr .5fr;
+        grid-template-areas:
+        "settings north item attack flee help"
+        "west south east defend next inspect";
+    }
   }
